removed candlestick option from dashboard

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,17 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <!-- Meta/SEO -->
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="copyright" content="This websites implementation is intellectual property of Cameron Morrison">
+	<meta name="keywords" content="CM Investment Analytics, Investing, CM Investing, CM Investment, Investment research">
+	<meta name="description" content="We provide an accessabile, A.I. assisted platform for investment research. 
+  Create your own watchlist, browse stocks and start your journey.">
+	<meta name="CM Investment Analytics" content="Research the markets fairly">
+	<meta name="description" content="CM Investment Analytics is the only investment tool you need.">
+	<meta name="robots" content="index, follow, noarchive">
 
+	<link rel="icon" type="image/x-icon" href="/img/fav.ico"/>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
